Implement AdAstra HUD with drag-and-drop functionality and integrate into overlay rendering